# Traffic-Congestion-Estimation-ISDS025

./: .gitignore copy  README copy.md  README.md  isds_full_pipeline.ipynb  pyproject.toml  requirements.txt
configs/: detection.yaml  pipeline.yaml  segmentation.yaml
data/: README.md
demo/: README.md  __init__.py  app.py  pipeline_runner.py
scripts/: __init__.py  finetune_yolo.py  run_pipeline.py  train_segmentation.py
src/: __init__.py
src/config/: __init__.py  defaults.py
src/data/: __init__.py  datasets.py
src/models/detection/: __init__.py  yolo_wrapper.py
src/models/segmentation/: deeplab_seresnet.py
src/models/segmentation/backbones/: resnet_se_dw.py
src/pipeline/: congestion.py  roi.py  speed.py
src/utils/: __init__.py  logging.py  video.py
tests/: test_congestion_pipeline.py  test_roi_extractor.py  test_segmentation_model.py
